--- a/blog/ex/ex_blogstyle.css
+++ b/blog/ex/ex_blogstyle.css
@@ -192,7 +192,7 @@ a {
 .recommend span {
     display: block;
     color: brown;
-    font-size: 13px;
+    font-size: 14px;
 }
 
 /* popular set */
@@ -269,7 +269,7 @@ a {
     -webkit-box-sizing: border-box
 }
 .box1, .boxA, .box5 {
-    padding-left: 10px;
+    padding-left: 20px;
     padding-right: 10px;
 }
 
@@ -297,20 +297,22 @@ a {
     }
 }
 /* 2.(((max-mobile)))---600px~767px or less */
-@media (min-width:600) and (max-width:767px){
+@media (min-width:600) and (max-width:767px) {
     .box4-1 {
+        width: 60%;
         float: left;
-        width: 49%;
     }
     .box4-2 {
-        float: right;
-        width: 49%;
+        float: left;
+        width: 40%;
     }
     .box4::after {
+        display: block;
         content: "";
         clear: both;
-        display: block;
     }
+
+    
 }
 /* ((tablet)) 768px or more */
 @media (min-width:768px){
