--- a/cat_blog/css/mystylecat.css
+++ b/cat_blog/css/mystylecat.css
@@ -2,40 +2,46 @@
 @charset "utf-8";
 
 /* font settings */
-@import url('https://fonts.googleapis.com/css2?family=Coming+Soon&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap');
 
 /* body set */
 * {
     margin: 0;
     padding: 0;
-    background: beige;
 }
-ul {
-    list-style: none;
+body {
+    background-image: linear-gradient(to left, #faf6ed 50%,#efe8d5 50%);
+    background-size: 80px 100%;
 }
-img {
-    vertical-align: top;
+
+/* header set */
+header {
+    background-image: url(../img/header.svg);
+    height: 190px;
+    background-size: cover;
+    background-position: center top;
+    margin-top: 40px;
+}
+.logo {
+    font-family: 'Amatic SC', cursive;
+    margin-top: 50px;
+    padding-bottom: 30px;
+    font-size: 60px;
+    font-weight: normal;
+    text-align: center; 
+    color: #949087;
+}
+header>p {
+    text-align: center;
+    color: #949087;
+    margin: 20px 0;
 }
 a {
     text-decoration: none;
-    color: burlywood;
 }
-/* header set */
-.header {
-    
-}
-.logo {
-    background-color: white;
-    display: block;
-    width: 100%;
-    margin-top: 50px;
-    padding-bottom: 30px;
-    font-family: 'Coming Soon', cursive;
-    font-size: 36px;
-    font-weight: normal;
-    text-align: center; 
-}
-.header p {
+li {
+    list-style: none;
 }
 
 /* main set */
@@ -43,175 +49,247 @@ a {
 
 .container {
     margin-top: 50px;
+    background-color: white;
+    border-radius: 0 0 10px 10px;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 40px;
+    padding-top: 16px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
 }
 
-.post_home {
-    margin-bottom: 40px;
-}
 
+/* contain set */
+/* title */
 .post_title {
+    font-family: 'Noto Sans', sans-serif;
+    background-image: linear-gradient(45deg, #fff 30%, #ccc 30%, #ccc 50%, #fff 50%, #fff 80%, #ccc 80%, #ccc 100%);
+    background-size: 8px 8px;
+    padding-bottom: 8px;
     margin-bottom: 30px;
-    border-bottom: lightgray 10px dashed;
 }
+.post_title h2 {
+    background-color: #fff;
+    padding-bottom: 14px;
+    padding-left: 8px;
+    padding-right: 8px;
+    font-size: 24px;
+    font-weight: 500;
+}
+.post_title h2 a {
+    color: #949087;
+}
+/* home */
+.post_home{
+    margin-bottom: 48px;
+    position: relative;
+}
+.post_home::after{
+    display: block;
+    content: "";
+    clear: both;
+}
+
 .post_img {
-    display: flex;
-    flex-direction: column;
-    width: 30%;
-    height: auto;
+    position: relative;
+    float: left;
+    shape-outside: circle();
 }
 .post_img .date {
-    font-family: 'Coming Soon', cursive;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: lightsteelblue;
-    top: 20;
-    left: 0;
+    font-family: 'Amatic SC', cursive;
+    background-color: #93d8d0;
+    top: 0;
+    left: -10;
     position: absolute;
-    padding: 5px 10px;
-    font-size: 20px;
-    color: aliceblue;
-    border-radius: 10% 40% 45% 30%;
-    box-sizing: border-box;
+    font-size: 24px;
+    color: #fff;
+    border-radius: 30% 50% 60% 30%/50% ;
+    padding: 10px 20px;
 }
-.post_img span {
-    background-color:lightsteelblue;
-    border-bottom: dotted gray 2px;
-    color: aliceblue;
-    font-size: 18px;
+.post_img .date span {
+    display: block;
+    font-size: 20px;
+    text-align: center;
+    border-bottom: 1px dotted #fff;
 }
 .post_img img {
-    
+    object-fit: cover;
+    width: 220px;
+    height: 180px;
+    border-radius: 40% 50% 60% 30%/50% ;
+    margin-right: 40px;
 }
-.post_title h2 {}
-.post_title h2 a {}
+
+
 .post_story {
-    display: flex;
-    width: 70%;
+    line-height: 1.6;
+    font-size: 18px;
+    color: #949087;
+    margin-bottom: 20px;
 }
 
 .post_more {
-    display: block;
-    text-align: right;
+    position: absolute;
+    bottom: -30px;
+    right: 0;
 }
 .post_more a {
     background-color: pink;
-    padding: 18px 20px;
-    color: aliceblue;
-    font-size: 18px;
-    border-radius: 10%;
-    border: 2px dotted palevioletred;
-
+    padding: 10px 20px;
+    color: #fff;
+    border-radius: 5%;
+    border: 2px dashed palevioletred;
+    display: inline-block;
+    box-shadow: 0 0 0 5px pink;
+}
+.post_more a:hover {
+    background-color: palevioletred;
+    box-shadow: 0 0 0 5px palevioletred;
+    border: 2px dashed pink;
 }
 
-/* sub set */
-
-
-/* category */
-.cat {
-    padding-bottom: 20px;
-    border: 10px double lightgrey;
-    border-radius: 6%;
+.main_section ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.cat h3 {
-    font-family: 'Coming Soon', cursive;
+.main_section ul li {
+    font-size: 24px;
+    letter-spacing: 30px;
     text-align: center;
-    padding-top: 20px;
 }
-.cat ul {
-    padding: 20px 10px;
+.main_section ul li a {
+    color: gray;
 }
-.cat ul li {}
-.cat ul li a {
-    background-image: url(../img/circle-solid.svg);
-    background-repeat: no-repeat;
-    background-size: 3%;
-    background-position: left center;
-    text-indent: 20px;
+.main_section ul li:nth-child(1) {
+    background-color: lightgray;
+    color: #fff;
+    border-radius: 50%;
+}
+
+.main_section ul li:nth-child(1) a {
+    color: white;
+}
+
+.main_section li a:hover {
+    background-color: #93d8d0;
+    border-radius: 50%;
+    color: #fff;;
+}
+
+/* side set */
+.side_section {}
+.side_section>div {
+    margin-bottom: 40px;
+    border: #ccc solid 1px;
+    outline: #ccc solid 3px;
+    outline-offset: 5px;
+    border-radius: 5px;
+    padding: 16px;
+}
+.side_section>div h3 {
+    font-family: 'Amatic SC', cursive;
+    color: #949087;
+    font-weight: normal;
+    font-size: 28px;
+    text-align: center;
+    letter-spacing: 3px;
+    margin-top: 18px ;
+    margin-bottom: 20px;
+}
+.side_section>div ul {}
+.side_section>div li {
+    display: flex;
+    border-bottom: #ccc dashed 1px;
+    align-items: center;
+}
+.side_section>div a {
+    color: #949087;
     display: block;
-    font-size: 18px;
-    position: relative;
-    padding: 10px 0;
-    border-bottom: 2px lightgray dotted;}
-    
-
-
-/* news set */
-.news {
-    padding-bottom: 20px;
-    border: 10px double lightgrey;
-    border-radius: 6%;
+    padding: 16px 0;
 }
-.news h3 {
-    font-family: 'Coming Soon', cursive;
-    text-align: center;
-    padding: 20px 0;
+.side_section>div li::before {
+    display: inline-block;
+    content: "";
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background-color: #93d8d0;
+    margin-right: 10px;
+}
+
+.news form {
+    display: flex;
+    margin-top: 20px;
 }
 .news p {
-    color: gray;
-    padding-bottom: 20px;
+    color: #949087;
+    font-size: 18px;
 }
-.news form input {
+.news input {
+    padding: 16px;
+}
+.news input[type=email] {
+    width: 75%;
+    border-radius: 10px 0 0 10px;
+    border: #ccc solid 2px;
+    border-right: none;
+}
+.news input:focus {
+    outline: none;
+}
+.news input[type='email']::placeholder {
+    color: #ccc;
 }
 
-/* popular set */
-.popular {
-    padding-bottom: 20px;
-    border: 10px double lightgrey;
-    border-radius: 6%;
+.news input[type=submit] {
+    width: 25%;
+    border-radius: 0 10px 10px 0;
+    background-color: pink;
+    border: none;
+    color: #fff;
+    font-size: 16px;
+    text-indent: -8px;
 }
-.popular h3 {
-    font-family: 'Coming Soon', cursive;
-    text-align: center;
-    padding: 20px 0;
-}
-.popular ul {}
-.popular ul li {}
-.popular ul li a {
-    background-image: url(../img/circle-solid.svg);
-    background-repeat: no-repeat;
-    background-size: 3%;
-    background-position: left center;
-    text-indent: 20px;
-    display: block;
-    font-size: 18px;
-    position: relative;
-    padding: 10px 0;
-    border-bottom: 2px lightgray dotted;
+.news input[type=submit]:hover {
+    cursor: pointer;
+    background-color: palevioletred;
 }
 
 
 /* footer set */
-.footer {
-    
+footer {
+    background-color: #949087;
 }
-.footer ul {}
-.footer ul li {}
-.footer ul li a {}
-.footer p {}
+footer ul {}
+footer li {}
+footer li a {}
+footer>p {}
 
 
-@media (min-width:600px){
-    .container::after {
-    display: block;
-    clear: both;
-    content: "";
+/* ----------------------media query---------------------- */
+/* 600px or more */
+@media(min-width:600px){
+    .container {
+        display: flex;
+        justify-content: space-between;}
+    .main_section {
+        width: 68%;
     }
     .side_section {
-    float: left;
-    width: 30%;
-    }
-    .main_section {
-    float: left;
-    width: 70%;
+        width: 26%;
     }
 }
-
-@media (min-width:1280px){
-    .main_section, 
-    .footer {
-        width: 1190px;
+@media(min-width:1140px){
+    header, 
+    .container {
+        width: 1000px;
         margin: 0 auto;
+    }
+
+    header {
+        margin-top: 40px;
     }
 }
